Fix :  TOC alignment, scroll issues

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,7 +70,7 @@ body {
 
 /* Scrollbar Styling */
 ::-webkit-scrollbar {
-  width: 5px ;
+  width: 8px ;
 }
 // body ::-webkit-scrollbar {
 //   -webkit-appearance: none;
